--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="CSS\styles.css">
+<link rel="stylesheet" type="text/css" href="CSS/styles.css">
 	
 </head>
 <body>
@@ -33,8 +33,8 @@
             </div>
       				<div class="collapse navbar-collapse" id="navbar-collapse">
                    	  		<ul class="nav navbar-nav navbar-right">
-							<li class="links"><a href="Home.html" style="color: darkcyan">HOME</a>
-        				    <li class="links"><a href="ABOUTME.html" style="color: darkcyan">ABOUTME</a>
+							<li class="links"><a href="Pages/Home.html" style="color: darkcyan">HOME</a>
+        				    <li class="links"><a href="Pages/ABOUTME.html" style="color: darkcyan">ABOUTME</a>
        	<li class="links"><a target="_blank" href="https://drive.google.com/open?id=0B-jtG4yJZ2wxVFNXRkloc2VWUWM" style="color:darkcyan">RESUME</a>
 </ul>
  						</ul>
