--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 	</nav>
 	<div class="container">
-  <img src="C:\Users\IBM_ADMIN\Desktop\Responsive Project\Images\index.png" class="img-circle" alt="image" width="350" height="350"> 
+  <img src="Images/index.png" class="img-circle" alt="image" width="350" height="350"> 
 </div>
 <div class="container text-center">
 <h3 class="text">Hii I'm Abhishek.Designing websites have become a hobby.<br>Cricket is always in heart.I'm almost always smiling :)</h3>
