--- a/Aboutme.html
+++ b/Aboutme.html
@@ -38,7 +38,7 @@
       				<div class="collapse navbar-collapse" id="navbar-collapse">
                    	  		<ul class="nav navbar-nav navbar-right">
 							<li class="links"><a href="Pages/index.html" style="color: darkcyan">HOME</a>
-        				    <li class="links"><a href="Pages/ABOUTME.html" style="color: darkcyan">ABOUTME</a>
+        				    <li class="links"><a href="Pages/Aboutme.html" style="color: darkcyan">ABOUTME</a>
        	<li class="links"><a target="_blank" href="https://drive.google.com/open?id=0B-jtG4yJZ2wxVFNXRkloc2VWUWM" style="color:darkcyan">RESUME</a>
 </ul>
  						</ul>
