--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  						</ul>
 					</div>
 				</div>
-	</nav>
+	</nav><br><br>
 	<div class="container">
   <img src="Images/index.png" class="img-circle" alt="image" width="350" height="350"> 
 </div>
