--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
  						</ul>
 					</div>
 				</div>
-	</nav><br><br>
+	</nav><br><br><br>
 	<div class="container">
   <img src="Images/index.png" class="img-circle" alt="image" width="350" height="350"> 
 </div>
 <div class="container text-center">
 <h3 class="text">Hii I'm Abhishek.Designing websites have become a hobby.<br>Cricket is always in heart.I'm almost always smiling :)</h3>
 </div>
-<br><br>
+<br><br><br>
   <div class="onlinelinks text-center">
     <a target="-blank" href="https://www.facebook.com/abhishek.jyotishi.73"><i class="fa fa-facebook"></i></a>
     <a target="-blank" href="https://twitter.com/Avikjyotishi"><i class="fa fa-twitter"></i></a>
