--- a/Aboutme.html
+++ b/Aboutme.html
@@ -228,7 +228,7 @@
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="C:\Users\IBM_ADMIN\Desktop\Responsive Project\Images\Javascript.jpg" class="Services_images"></i></i>
+					<i class=""><img src="Images/Javascript.jpg" class="Services_images"></i></i>
 					<hr>
 				</div>
 			</div>
