--- a/Aboutme.html
+++ b/Aboutme.html
@@ -269,6 +269,16 @@
 					<hr>
 				</div>
 			</div>
+
+ 	<div class="col-md-4 col-sm-6">
+				<div class="services-detail">
+					<i class=""><img src="Images/github-logo.jpg" class="Services_images"></i></i>
+					<hr>
+				</div>
+			</div>
+
+
+
             </div>
         </div>
     </section>
