--- a/Aboutme.html
+++ b/Aboutme.html
@@ -61,7 +61,7 @@
 				<div class="experience">
 				<div class="experience-item">
 					<div class="experience-circle ">
-					   <i class="icon-graduation"><img src="Images/SaintPauls.jpg" class="SaintPauls"></i> 
+					   <i class="icon-graduation"<a href="https://www.stpauls-rourkela.org/"><img src="Images/SaintPauls.jpg" class="SaintPauls"></a></i> 
   					</div>
 					<div class="experience-content experience-color-blue">
 						<h4>High School Education(2008-2009)</h4>
@@ -72,7 +72,7 @@
 				
 				<div class="experience-item">
 					<div class="experience-circle">
-					   <i class="icon-graduation"><img src="Images/SaintPauls.jpg" class="SaintPauls"></i> 
+					   <i class="icon-graduation"><a href="https://www.stpauls-rourkela.org/"><img src="Images/SaintPauls.jpg" class="SaintPauls"></a></i> 
   					</div>
 					<div class="experience-content experience-color-blue">
 						<h4>High Secondary Education(2009-2011)</h4>
@@ -82,7 +82,7 @@
 				 </div>
 				<div class="experience-item">
 					<div class="experience-circle">
-					   <i class="icon-graduation"><img src="Images/IIITLogo.png" class="SaintPauls"></i> 
+					   <i class="icon-graduation"><a href="http://www.iiit-bh.ac.in/"><img src="Images/IIITLogo.png" class="SaintPauls"></a></i> 
   					</div>
 					<div class="experience-content experience-color-blue">
 						<h4>Graduation Degree (20011-2015)</h4>
@@ -99,7 +99,7 @@
 				
 				<div class="experience-item">
 					<div class="experience-circle">
-					   <i class="icon-graduation"><img src="Images/IBM.png" class="SaintPauls"></i> 
+					   <i class="icon-graduation"><a href="https://www.google.co.in/search?q=ibm+india&oq=ibm+india&aqs=chrome..69i57j0l2j35i39l2j0.3510j0j4&sourceid=chrome&ie=UTF-8#q=ibm+office+bengaluru,+karnataka&rflfq=1&rlha=0&rllag=12959110,77623169,2589&tbm=lcl&rldimm=16974383573117737327&tbs=lrf:!2m4!1e17!4m2!17m1!1e2!2m1!1e3!3sEAE,lf:1,lf_ui:3"><img src="Images/IBM.png" class="SaintPauls"></a></i> 
   					</div>
 					<div class="experience-content experience-color-blue">
 						<h3>IBM INDIA PVT LTD (Present)</h3>
@@ -214,28 +214,28 @@
             <div class="row margin-top-30">
             <div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/HTML5-logo.jpg" class="Services_images"></i>
+					<i class=""><a href="https://www.w3schools.com/html/"><img src="Images/HTML5-logo.jpg" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/CSS3_Logo.png" class="Services_images"></i></i>
+					<i class=""><a href="https://www.w3schools.com/css/css3_intro.asp"><img src="Images/CSS3_Logo.png" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/Javascript.jpg" class="Services_images"></i></i>
+					<i class=""><a href="https://www.w3schools.com/js/"><img src="Images/Javascript.jpg" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/JQuery.png" class="Services_images"></i></i>
+					<i class=""><a href="https://www.w3schools.com/jquery/"><img src="Images/JQuery.png" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
@@ -243,21 +243,21 @@
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/bootstrap.png" class="Services_images"></i></i>
+					<i class=""><a href="https://www.w3schools.com/bootstrap/"><img src="Images/bootstrap.png" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
 
             <div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/Angular.js.jpg" class="Services_images"></i></i>
+					<i class=""><a href="https://www.w3schools.com/angular/"><img src="Images/Angular.js.jpg" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/eclipse.png" class="Services_images"></i></i>
+					<i class=""><a href="https://www.tutorialspoint.com/eclipse/"><img src="Images/eclipse.png" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
@@ -265,14 +265,14 @@
 
 			<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/vscode.png" class="Services_images"></i></i>
+					<i class=""><a href="https://code.visualstudio.com/docs/extensions/example-hello-world"><img src="Images/vscode.png" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
 
  	<div class="col-md-4 col-sm-6">
 				<div class="services-detail">
-					<i class=""><img src="Images/github-logo.jpg" class="Services_images"></i></i>
+					<i class=""><a href="https://guides.github.com/activities/hello-world/"><img src="Images/github-logo.jpg" class="Services_images"></a></i>
 					<hr>
 				</div>
 			</div>
