--- a/Aboutme.html
+++ b/Aboutme.html
@@ -61,7 +61,7 @@
 				<div class="experience">
 				<div class="experience-item">
 					<div class="experience-circle ">
-					   <i class="icon-graduation"<a href="https://www.stpauls-rourkela.org/"><img src="Images/SaintPauls.jpg" class="SaintPauls"></a></i> 
+					   <i class="icon-graduation"><a href="https://www.stpauls-rourkela.org/"><img src="Images/SaintPauls.jpg" class="SaintPauls"></a></i> 
   					</div>
 					<div class="experience-content experience-color-blue">
 						<h4>High School Education(2008-2009)</h4>
